# lit-walk

./: README.md  pyproject.toml  requirements.txt  setup.py
lit/: __init__.py  cli.py  nlp.py  tool.py  walk.py
litwalk/: __init__.py  cli.py  litwalk.py  notesmanager.py  walk.py
litwalk/conf/: default.yml
litwalk/views/: __init__.py  litwalk.css  notes.py
tests/: test_add.py
tests/data/bib/: paperpile.bib
tests/data/json/: paperpile.json
